<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newsItemLayout"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <ImageView
        android:id="@+id/ivNewsImage"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/news_image"
        android:contentDescription="@string/ivNewsImageDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvNewsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNewsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/tvNewsTitle"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvNewsAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivNewsImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNewsAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/tvNewsAuthor"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/tvNewsDescription"
        app:layout_constraintEnd_toStartOf="@id/tvNewsDate"
        app:layout_constraintStart_toEndOf="@+id/ivNewsImage"
        app:layout_constraintTop_toBottomOf="@+id/tvNewsTitle"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvNewsDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/tvNewsDate"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/tvNewsDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNewsAuthor"
        app:layout_constraintTop_toBottomOf="@+id/tvNewsTitle"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvNewsDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/tvNewsDescription"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivNewsImage"
        app:layout_constraintTop_toBottomOf="@+id/tvNewsAuthor" />
</androidx.constraintlayout.widget.ConstraintLayout>